<!-- activity_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtId"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint"
        android:inputType="number"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/txtNombre"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_hint"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/txtAutor"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autor_hint"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/txtPrecio"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio_hint"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="guardar"/>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:onClick="buscar"/>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:onClick="actualizar"/>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:onClick="eliminar"/>
    <Button
        android:id="@+id/btnlistar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:onClick="listarLibros"/>

</LinearLayout>
